--- a/App/DockerLearning.Api/Dockerfile
+++ b/App/DockerLearning.Api/Dockerfile
@@ -1,7 +1,7 @@
 # Use the ASP.NET runtime image for the base stage
 FROM mcr.microsoft.com/dotnet/aspnet:8.0-alpine AS base
 # Set a non-root user for better security
-USER nobody:nogroup
+USER $APP_UID
 WORKDIR /app
 EXPOSE 8080 8081
 EXPOSE 5000 7223
@@ -32,6 +32,25 @@ WORKDIR /app
 
 # Copy the published output from the publish stage
 COPY --from=publish /app/publish .
+
+# Switch to root user temporarily to apply chmod
+USER root
+
+# Set permissions on the /app directory to allow writing
+RUN chmod -R 777 /app/appsettings.json \
+    /app/NLog.config \
+    /app/appsettings.qa.json \
+    /app/NLog.qa.config \
+    /app/appsettings.stage.json \
+    /app/NLog.stage.config \
+    /app/appsettings.prod.json \
+    /app/NLog.prod.config
+
+# Switch back to the non-root user
+USER $APP_UID
+
+# List the files in /app directory
+RUN ls -al /app
 
 # Set entry point to run the API
 ENTRYPOINT ["dotnet", "DockerLearning.Api.dll"]
