--- a/App/DockerLearning.Api/appsettings.stage.json
+++ b/App/DockerLearning.Api/appsettings.stage.json
@@ -1,4 +1,6 @@
 {
   "AppConfig1": "Stage1",
-  "AppConfig2": "Stage2"
+  "AppConfig2": "Stage2",
+  "MY_CUSTOM_ENV1": "STAGE",
+  "MY_CUSTOM_ENV2": "STAGEConfigData1"
 }
