--- a/App/DockerLearning.Api/DockerLearning.Api.csproj
+++ b/App/DockerLearning.Api/DockerLearning.Api.csproj
@@ -25,4 +25,10 @@
     </Content>
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="update-config.sh">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
