--- a/App/DockerLearning.Api/appsettings.json
+++ b/App/DockerLearning.Api/appsettings.json
@@ -2,5 +2,9 @@
   "AppConfig1": "Dev1",
   "AppConfig2": "Dev2",
   "MY_CUSTOM_ENV1": "",
-  "MY_CUSTOM_ENV2": ""
+  "MY_CUSTOM_ENV2": "",
+  "AWSACCESSKEY": "",
+  "AWSSECRETACCESSKEY": "",
+  "DefaultDBConnStr": "",
+  "TargetLocation": ""
 }
