--- a/App/DockerLearning.Api/DockerLearning.Api.csproj
+++ b/App/DockerLearning.Api/DockerLearning.Api.csproj
@@ -10,6 +10,14 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Content Remove="NLog111111111.config" />
+    <Content Remove="NLog111111111.development.config" />
+    <Content Remove="NLog111111111.prod.config" />
+    <Content Remove="NLog111111111.qa.config" />
+    <Content Remove="NLog111111111.stage.config" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.21.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2" />
   </ItemGroup>
