--- a/App/DockerLearning.Api/appsettings.qa.json
+++ b/App/DockerLearning.Api/appsettings.qa.json
@@ -3,8 +3,8 @@
   "AppConfig2": "Test2",
   "MY_CUSTOM_ENV1": "",
   "MY_CUSTOM_ENV2": "",
-  "AWSACCESSKEY": "",
-  "AWSSECRETACCESSKEY": "",
   "DefaultDBConnStr": "",
-  "TargetLocation": ""
+  "TargetLocation": "",
+  "AwsAccessKey": "",
+  "AwsSecretAccessKey": ""
 }
