--- a/App/DockerLearning.Api/DockerLearning.Api.csproj
+++ b/App/DockerLearning.Api/DockerLearning.Api.csproj
@@ -31,6 +31,9 @@
     <Content Update="appsettings.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
+    <Content Update="NLog.config">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
 
   <ItemGroup>
