--- a/App/DockerLearning.Api/appsettings.stage.json
+++ b/App/DockerLearning.Api/appsettings.stage.json
@@ -3,8 +3,8 @@
   "AppConfig2": "Stage2",
   "MY_CUSTOM_ENV1": "STAGE",
   "MY_CUSTOM_ENV2": "STAGEConfigData1",
-  "AWSACCESSKEY": "APPSETTING_AWSACCESSKEY_VALUE1",
-  "AWSSECRETACCESSKEY": "APPSETTING_AWSSECRETACCESSKEY_VALUE1",
   "DefaultDBConnStr": "CONNSTR_DefaultDBConnStr_VALUE1",
-  "TargetLocation": "NLOGTARGET_TargetLocation_VALUE1"
+  "TargetLocation": "NLOGTARGET_TargetLocation_VALUE1",
+  "AwsAccessKey": "AwsKeyValue",
+  "AwsSecretAccessKey": "AwsSecretKeyValue"
 }
