Added new feature

--- a/App/DockerLearning.Api/NLog.config
+++ b/App/DockerLearning.Api/NLog.config
@@ -1,35 +1,18 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <nlog xmlns="http://www.nlog-project.org/schemas/NLog.xsd"
-      xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-      throwOnConfigExceptions="true">
-
-  <internalLogFile value="D:\temp\nlog-internal.log" />
-  <internalLogLevel value="Trace" />
-
-  <extensions>
-    <add assembly="DockerLearning.Common.Api, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null"
-         type="DockerLearning.Common.Api.Utilities.CustomJsonLayoutRenderer, DockerLearning.Common.Api" />
-  </extensions>
+      xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" throwOnConfigExceptions="true">
 
   <targets>
-    <target name="jsonFile" xsi:type="File"
-            fileName="D:\logs\app-log.json"
-            layout="${customJsonLayout}" />
-
-    <target name="jsonConsole" xsi:type="Console"
-            layout="${customJsonLayout}" />
+    <target name="default" xsi:type="File" layout="${message}" fileName="/inetpub/wwwroot/logs/app-log.txt" archiveFileName="/inetpub/wwwroot/logs/archives/app-log.{#}.txt" archiveEvery="Day" archiveNumbering="Rolling" archiveAboveSize="5242880" maxArchiveFiles="90" />
+    <target name="console" xsi:type="Console" layout="${message}" />
   </targets>
-
   <rules>
-    <!--<logger name="Microsoft.AspNetCore.Hosting.*" minlevel="Warn" writeTo="jsonFile,jsonConsole" final="true" />
-    <logger name="Microsoft.*" minlevel="Warn" writeTo="jsonFile,jsonConsole" final="true" />
-    <logger name="System.*" minlevel="Warn" writeTo="jsonFile,jsonConsole" final="true" />-->
-
-    <logger name="Microsoft.AspNetCore.Hosting.*" minlevel="Warn" writeTo="microsoftFile" final="true" />
-    <logger name="Microsoft.*" minlevel="Warn" writeTo="microsoftFile" final="true" />
-    <logger name="System.*" minlevel="Warn" writeTo="microsoftFile" final="true" />
-
-    <logger name="*" minlevel="Trace" writeTo="jsonFile,jsonConsole" />
+    <!--<logger name="*" level="TRACE" writeTo="default, console" />
+    <logger name="*" level="WARN" writeTo="default, console" />
+    <logger name="*" level="ERROR" writeTo="default, console" />
+    <logger name="*" level="FATAL" writeTo="default, console" />-->
+    <logger name="Microsoft.*" final="true" />
+    <logger name="*" minlevel="Trace" writeTo="console,default" />
   </rules>
 
 </nlog>
